applications/argocd/prod/argocd-application-controller-deployment.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: argocd-application-controller
spec:
  template:
    spec:
      securityContext:
        fsGroup: 999
        runAsUser: 999
        runAsGroup: 999
