applications/argocd/prod/argocd-server-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
spec:
  template:
    spec:
      securityContext:
        fsGroup: 999
        runAsUser: 999
        runAsGroup: 999
